Fixed navbar on mobile

--- a/public/stylesheets/material-style.css
+++ b/public/stylesheets/material-style.css
@@ -46,6 +46,10 @@ nav{
         font-size: 2.5rem;
     }
 
+    #navbar {
+        float: left !important;
+    }
+
     .sidebar-container {
         position: fixed !important;
         left: -100% !important;
